[Bug] Fix icon alignment in buttons (#360)
* Fix icon alignment in buttons

* Fix ordering

--- a/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
@@ -4,7 +4,7 @@
     padding-right: $space-normal;
 
     i {
-      padding-right: $space-one;
+      padding-right: $space-small;
     }
   }
 
@@ -25,7 +25,12 @@
   }
 
   > .icon {
-    font-size: $font-size-mini;
-    margin-right: $space-smaller;
+    font-size: $font-size-default;
   }
+}
+
+.button--fixed-right-top {
+  position: fixed;
+  right: $space-small;
+  top: $space-small;
 }
